5/31/13 migrate StringUtils to phetcommon.util
# 0.0.0-3 5/31/13
5/31/13 publish dev version with sliders on the left
# 0.0.0-2 5/31/13
5/31/13 publish dev version with sliders on the right
5/30/13 ditch getCompleteBounds calls, after scenery reverted to bounds===completeBounds
5/30/13 varargs implementation of StringUtil.format
5/30/13 replace ColorRange with minColor and maxColor properties for Solute
5/30/13 make beaker label transparent
5/30/13 provide a predictable implementation of toFixed, so that model computations are accurate to the desired number of decimal places
5/30/13 make slider thumbs a bit taller, to improve usability on tablets
5/30/13 try the sliders on the right and the concentration read-out on the left
5/29/13 localize tick labels on beaker
5/29/13 fix water formula
5/29/13 use Fort.model instead of Fort.property (second phase)
5/29/13 use Fort.property instead of phetcommon.Property (first phase)
5/29/13 replace DebugOriginNode with scenery.Circle
5/29/13 use new scenery features (getChildrenCount, getChildAt) to manage precipitate particles
5/29/13 fix layout problem with min/max values in concentration display
5/28/13 enable bounds debugging for range labels
# 0.0.0-1 5/28/13
5/28/13 ***** FEATURE COMPLETE *****
5/28/13 fix lint errors
5/28/13 show no decimal places for "0" range value
5/28/13 align concentration display with bottom of beaker
5/28/13 use getCompleteBounds to position sliders, since their values may initially be invisible
5/28/13 update value positions only when type are visible, or scenery barfs
5/28/13 fix bug in saturation indicator
5/28/13 fix layout problem with slider range values
5/28/13 "Solution Volume" slider, with some text layout problems
5/28/13 "Solute Amount" slider, with some text layout problems
5/28/13 replace LinearFunction with dot.Util.linear
5/28/13 add concentration display (has title layout problem)