@@ -1,3 +1,4 @@
+5/31/13 migrate ColorUtils.interpolateRGBA to scenery.Color
 5/31/13 migrate StringUtils to phetcommon.util
 # 0.0.0-3 5/31/13
 5/31/13 publish dev version with sliders on the left
